# a2a-backend-kit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/a2a_backend_kit/: __init__.py  agent_card.py  auth.py  bootstrap.py  bootstrap_health.py  context.py  observability.py  peers.py  task_store.py
tests/: test_kit.py
