[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-backend-kit"
version = "0.1.2"
description = "Shared helpers for Threads A2A backend adapters"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk>=0.3.26,<2.0",
    "fastapi>=0.115",
    "httpx>=0.27",
    "sse-starlette>=3.0",
    "pyyaml>=6.0",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "fastapi>=0.115",
]

[tool.setuptools.packages.find]
where = ["src"]
